--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,17 +2,17 @@
 import Logo from '../components/Logo.astro';
 
 const navItems = [
-    { linkText: 'Home', href: '/' },
-    { linkText: 'Revalidation', href: '/revalidation' },
-    { linkText: 'Image CDN', href: '/image-cdn' },
-    { linkText: 'Edge Function', href: '/edge' },
-    { linkText: 'Blobs', href: '/blobs' }
+    { linkText: 'Work', href: '/' },
+    { linkText: 'About Me', href: '/about-me' }
+    // { linkText: 'Image CDN', href: '/image-cdn' },
+    // { linkText: 'Edge Function', href: '/edge' },
+    // { linkText: 'Blobs', href: '/blobs' }
 ];
 ---
 
 <nav class="flex flex-wrap items-center gap-4 pt-6 pb-16 sm:pt-12 sm:pb-24">
-    <a href="/">
-        <Logo />
+    <a class="flex flex-grow-1 justify-center" href="/">
+        <h1>Anthony Shaw</h1>
     </a>
     {
         !!navItems?.length && (
