--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,27 @@ An Astro website can go way beyond static pages - on the right platform.
 Netlify supports not only [Streaming SSR](https://docs.astro.build/en/guides/server-side-rendering/#html-streaming) and fast [Edge Middleware](https://docs.astro.build/en/guides/middleware/), but also [on-demand revalidation](https://www.netlify.com/blog/cache-tags-and-purge-api-on-netlify/) and [stale-while-revalidate](https://www.netlify.com/blog/swr-and-fine-grained-cache-control/). 
 Any page or data can be rebuilt only when needed, without site visitors ever getting a performance hit.
 `;
+
+const workCategories = [
+    { name: 'lastminute.com Content Design', href: '/work/lastminute-com-content-design', current: true },
+    { name: 'lastminute.com Creative Work', href: '/work/lastminute-com-creative', current: false },
+    { name: 'Spec Work', href: '/work/spec-work', current: false }
+];
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Anthony Shaw | Content Designer">
     <ContextAlert class="mb-8" />
-    <h1 class="mb-10">Netlify Platform Starter for Astro</h1>
-    <Markdown content={explainer} class="mb-10 text-lg" />
-    <p>
-        <a href="https://docs.netlify.com/frameworks/astro/" class="btn btn-lg sm:min-w-64">Read the Docs</a>
-    </p>
+    <!-- <Markdown content={explainer} class="mb-10 text-lg" /> -->
+    <h2 class="justify-center mb-10">Work</h2>
+    <ul class="grid gap-4 sm:grid-cols-2 lg:grid-cols-3">
+        {
+            workCategories.map((category) => (
+                <li>
+                    <a href={category.href} class="block p-6 text-lg font-medium text-center text-black bg-white rounded hover:bg-gray-200">
+                        {category.name}
+                    </a>
+                </li>
+            ))
+        }
+    </ul>
 </Layout>
