Redesigned background & font and added content

--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -3,7 +3,7 @@ import Layout from '../../layouts/Layout.astro';
 import Markdown from '../../components/Markdown.astro';
 
 const buttons = [
-    { text: 'Email me', href: 'mailto:}' },
+    { text: 'Email me', href: 'mailto:info@antshaw.com' },
     { text: 'LinkedIn', href: 'https://www.linkedin.com/in/anthonyjjshaw/' }
 ];
 ---
