--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,16 +10,29 @@ const navItems = [
 ];
 ---
 
-<nav class="flex flex-wrap items-center gap-4 pt-6 pb-16 sm:pt-12 sm:pb-24">
-    <a class="flex flex-grow-1 justify-center" href="/">
+<nav class="flex mobile-center flex-wrap items-end gap-4 pt-6 pb-16 sm:pt-12 sm:pb-24">
+    {
+        !!navItems?.length && (
+            <ul class="flex flex-wrap gap-x-4 mobile-nav gap-y-1">
+                {navItems.map((item) => (
+                    <li>
+                        <a href={item.href} class="inline-block under px-1.5 py-1 sm:px-3 sm:py-2">
+                            {item.linkText}
+                        </a>
+                    </li>
+                ))}
+            </ul>
+        )
+    }
+    <a class="flex" href="/">
         <h1>Anthony Shaw</h1>
     </a>
     {
         !!navItems?.length && (
-            <ul class="flex flex-wrap gap-x-4 gap-y-1">
+            <ul class="flex flex-wrap gap-x-4 hide-on-mobile gap-y-1">
                 {navItems.map((item) => (
                     <li>
-                        <a href={item.href} class="inline-block px-1.5 py-1 sm:px-3 sm:py-2">
+                        <a href={item.href} class="inline-block under px-1.5 py-1 sm:px-3 sm:py-2">
                             {item.linkText}
                         </a>
                     </li>
