--- a/src/pages/work/lastminute-com-creative/index.astro
+++ b/src/pages/work/lastminute-com-creative/index.astro
@@ -3,8 +3,8 @@ import Layout from '../../../layouts/Layout.astro';
 import Markdown from '../../../components/Markdown.astro';
 ---
 
-<Layout title="lastminute.com UX Writing Case Study">
-    <h1 class="mb-10">lastminute.com UX Writing</h1>
+<Layout title="lastminute.com Creative Work Case Study">
+    <h2 class="mb-10">lastminute.com Creative Work</h2>
     <Markdown
         content={`
 A collection of the various pieces of creative work I did for lastminute.com.
