--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const workCategories = [
         {
             workCategories.map((category) => (
                 <li class="work-category">
-                    <a href={category.href} class="block p-6 text-lg font-medium text-center text-black bg-white rounded hover:bg-gray-200">
+                    <a href={category.href} class="block p-6 text-lg font-medium text-center text-black rounded hover:bg-gray-200">
                         {category.name}
                     </a>
                 </li>
