--- a/src/pages/work/lastminute-com-content-design/index.astro
+++ b/src/pages/work/lastminute-com-content-design/index.astro
@@ -4,11 +4,11 @@ import Markdown from '../../../components/Markdown.astro';
 import { Image } from 'astro:assets';
 
 const content = `
-A collection of the various pieces of content design I did for lastminute.com.
+Here are some pieces of content design I've done for lastminute.com.
 
 ### Favourites feature
 
-A feature in the app allowing users to save hotels to a personalised list.
+A feature in the mobile app allowing users to save hotels to a personalised list.
 
 The main challenges for this feature was to make it as easy to use as possible, while also making it clear what the feature was and how it worked. I worked closely with the design team to ensure the copy was clear and concise, while also fitting within the design constraints.
 
