Updated text in the content design page

--- a/src/pages/work/lastminute-com-content-design/index.astro
+++ b/src/pages/work/lastminute-com-content-design/index.astro
@@ -4,15 +4,15 @@ import Markdown from '../../../components/Markdown.astro';
 import { Image } from 'astro:assets';
 
 const content = `
-A collection of the various pieces of content design I did for lastminute.com.
+Some examples of content design I did for lastminute.com.
 
 ### Favourites feature
 
 A feature in the app allowing users to save hotels to a personalised list.
 
-The main challenges for this feature was to make it as easy to use as possible, while also making it clear what the feature was and how it worked. I worked closely with the design team to ensure the copy was clear and concise, while also fitting within the design constraints.
+The main challenges for this feature was balancing out how to convey functionality. I worked closely with the design team to ensure the copy was clear and concise, while also fitting within the design constraints.
 
-![Mockups of Favourite feature.](/images/fave_example.png "Favourite feature")
+![Mockups of Favourite feature.](/images/fave_example.png "A series of mockups outlining the "Favourite" feature in the lastminute.com app.")
 
 ### Change Language modal
 
