--- a/src/pages/work/lastminute-com-content-design/index.astro
+++ b/src/pages/work/lastminute-com-content-design/index.astro
@@ -10,15 +10,19 @@ Some examples of content design I did for lastminute.com.
 
 A feature in the app allowing users to save hotels to a personalised list.
 
+![Mockups of Favourite feature.](/images/fave_example.png "A series of screen mockups outlining the Favourite feature in the lastminute.com app.")
+
 The main challenges for this feature was balancing out how to convey functionality. I worked closely with the design team to ensure the copy was clear and concise, while also fitting within the design constraints.
 
-![Mockups of Favourite feature.](/images/fave_example.png "A series of mockups outlining the "Favourite" feature in the lastminute.com app.")
 
-### Change Language modal
+### Change Language bottom sheet
 
-This modal allows users to change the language of the app. As the original was somewhat wordy, it was important to make this as easy to use as possible, as lastminute.com has a global audience.
+I was asked to reword the message that get shown to users when they attempt to change the language of the app.
 
 ![Mockup of Change Language modal.](/images/change_language_modal.png "Change Language modal")
+
+In the new version, I simplified it, removing the instructions to reduce cognitive load.
+
 `;
 ---
 
