--- a/src/pages/work/spec-work/index.astro
+++ b/src/pages/work/spec-work/index.astro
@@ -7,7 +7,20 @@ import Markdown from '../../../components/Markdown.astro';
     <h1 class="mb-10">Spec Work</h1>
     <Markdown
         content={`
-A collection of the various spec pieces of content design.
+Some content design spec pieces for both consumer and enterprise apps.
+
+### Restaurant Booking App
+
+A feature allowing users to pre-order meal at a restaurant.
+
+![Mockups of Restaurant Booking App.](/images/restaurant_booking_app.png "A series of screen mockups outlining the Restaurant Booking App.")
+
+### Small Business Dashboard
+
+A dashboard for small business owners to manage their business.
+
+![Mockups of Restaurant Booking App.](/images/restaurant_booking_app.png "A series of screen mockups outlining the Restaurant Booking App.")
+
     `}
         class="mb-10 text-lg"
     />
