--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -24,7 +24,7 @@ I love how they can be used to inform, persuade, entertain, and inspire. I love 
     <div class="flex flex-wrap gap-4 mb-10">
         {
             buttons.map((button) => (
-                <a href={button.href} class="inline-block px-6 py-3 text-lg font-medium text-center text-black bg-white rounded hover:bg-gray-200">
+                <a href={button.href} class="inline-block border px-6 py-3 text-lg font-medium text-center text-black rounded hover:bg-gray-200">
                     {button.text}
                 </a>
             ))
