--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,6 +79,10 @@
         justify-content: space-between !important;
     }
 
+    .border {
+        border: 1px solid lightgrey;
+    }
+
     @media (max-width: 750px) {
         .hide-on-mobile {
             display: none !important;
