Added screenshot of Total Packages

--- a/src/pages/work/lastminute-com-creative/index.astro
+++ b/src/pages/work/lastminute-com-creative/index.astro
@@ -8,6 +8,15 @@ import Markdown from '../../../components/Markdown.astro';
     <Markdown
         content={`
 A collection of the various pieces of creative work I did for lastminute.com.
+
+### Total Packages landing page
+
+A campaign to promote lastminute.com's curated holiday packages.
+
+![Mockup of Total Packages campaign landing page.](/images/total_packages_landing_page_with_border.png "A screensh outlining the Total Packages campaign.")
+
+[View the live page here.](https://www.lastminute.com/holidays/total-packages)
+
     `}
         class="mb-10 text-lg"
     />
