--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import ContextAlert from '../components/ContextAlert.astro';
 import Markdown from '../components/Markdown.astro';
 
-const explainer = `
-An Astro website can go way beyond static pages - on the right platform.
-
-Netlify supports not only [Streaming SSR](https://docs.astro.build/en/guides/server-side-rendering/#html-streaming) and fast [Edge Middleware](https://docs.astro.build/en/guides/middleware/), but also [on-demand revalidation](https://www.netlify.com/blog/cache-tags-and-purge-api-on-netlify/) and [stale-while-revalidate](https://www.netlify.com/blog/swr-and-fine-grained-cache-control/). 
-Any page or data can be rebuilt only when needed, without site visitors ever getting a performance hit.
-`;
-
 const workCategories = [
     {
         name: 'lastminute.com Content Design',
@@ -17,7 +10,7 @@ const workCategories = [
         current: true,
         image: '/images/lastminute_com_app_loading_screen.PNG'
     },
-    { name: 'lastminute.com Creative Work', href: '/work/lastminute-com-creative', current: false },
+    { name: 'lastminute.com Creative Work', href: '/work/lastminute-com-creative', image: '/images/lastminute_com_homepage_no_borders.png', current: false },
     { name: 'Spec Work', href: '/work/spec-work', current: false }
 ];
 ---
