--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const workCategories = [
         image: '/images/lastminute_com_app_loading_screen.PNG'
     },
     { name: 'lastminute.com Creative Work', href: '/work/lastminute-com-creative', image: '/images/lastminute_com_homepage_no_borders.png', current: false },
-    { name: 'Spec Work', href: '/work/spec-work', current: false, image: '/images/spec_work_logo.png' }
+    { name: 'Spec Work', href: '/work/spec-work', current: false, image: '/images/spec_work_logo.svg' }
 ];
 ---
 
@@ -22,7 +22,7 @@ const workCategories = [
             workCategories.map((category) => (
                 <li class="work-category">
                     <a href={category.href} class="p-6 text-lg flex flex-col items-center font-medium text-center text-black rounded hover:bg-gray-200">
-                        <img src={category.image} alt={category.name} class="mb-4 rounded" />
+                        <img src={category.image} alt={category.name} class="mb-4 rounded work-category-img" />
                         {category.name}
                     </a>
                 </li>
