Added pictures of restaurant app

--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -13,11 +13,12 @@ const buttons = [
     <Markdown
         content={`
 
-I love words, big and small. 
+Hi! 
 
-I love how they can be used to inform, persuade, entertain, and inspire. I love how they can be combined to create meaning and convey complex ideas.
+I'm Anthony, a content designer based in London. I specialise in creating clear, concise, and user-friendly content for digital products and services. 
 
 ## Get in touch
+
 `}
         class="mb-10 text-lg"
     />
