--- a/src/pages/work/lastminute-com-creative/index.astro
+++ b/src/pages/work/lastminute-com-creative/index.astro
@@ -10,6 +10,11 @@ A collection of the various pieces of creative work I did for lastminute.com.
 
 A landing page designed to promote lastminute.com's curated holiday packages.
 
+
+![Mockup of Total Packages campaign landing page.](/images/total_packages_landing_page_with_border.png "A screensh outlining the Total Packages campaign.")
+
+This was the first project I undertook as part of a newly-created team aimed at providing a more in-depth approach to product marketing. On this landing page, we wanted to keep the tone breezy and playful overall, using highlighter font for emphasis.
+
 <p class="">
     <a href="https://www.lastminute.com/holidays/total-packages" class="inline-block border px-6 py-3 text-lg font-medium text-center text-black rounded hover:bg-gray-200">
         View Live Page
@@ -17,13 +22,14 @@ A landing page designed to promote lastminute.com's curated holiday packages.
 </p>
 
 
-![Mockup of Total Packages campaign landing page.](/images/total_packages_landing_page_with_border.png "A screensh outlining the Total Packages campaign.")
-
 ### Loyalty program reminder email A/B test
 
-An email to remind users about the benefits of joining lastminute.com's loyalty program.
+A mockup of a reminder email we wanted to send to users who signed up to the lastminute.com loyalty programme. 
 
-![Mockup of Total Packages campaign landing page.](/images/total_packages_landing_page_with_border.png "A screensh outlining the Total Packages campaign.")
+!["A screenshot displaying a HTML mockup of the loyalty programme reminder email.](/images/lastminute_com_loyalty_email.png "A screenshot displaying the loyalty programme reminder email.")
+
+We wanted to do an A/B test to see if users would respond better to different call-to-actions intending for them to look at our holiday deals: Version 1 had "Book now", while Version 2 had "Show deals".
+
 
 `;
 ---
