--- a/src/pages/work/spec-work/index.astro
+++ b/src/pages/work/spec-work/index.astro
@@ -11,9 +11,9 @@ Some content design spec pieces for both consumer and enterprise apps.
 
 ### Restaurant Booking App
 
-A feature allowing users to pre-order meal at a restaurant.
+A wireframe of a mobile app designed to allow users to pre-order meal at a restaurant.
 
-![Mockups of Restaurant Booking App.](/images/restaurant_booking_app.png "A series of screen mockups outlining the Restaurant Booking App.")
+![Mockups of Restaurant Booking App.](/images/restaurant_order_screen_wireframe_with_shadow.png "A series of screen mockups outlining the Restaurant Booking App.")
 
 ### Small Business Dashboard
 
