--- a/src/pages/work/lastminute-com-content-design/index.astro
+++ b/src/pages/work/lastminute-com-content-design/index.astro
@@ -12,15 +12,19 @@ A feature in the app allowing users to save hotels to a personalised list.
 
 ![Mockups of Favourite feature.](/images/fave_example.png "A series of screen mockups outlining the Favourite feature in the lastminute.com app.")
 
-The main challenges for this feature was balancing out how to convey functionality. I worked closely with the design team to ensure the copy was clear and concise, while also fitting within the design constraints.
+The main challenges for this feature was balancing out how to convey functionality while remaining advertorial. 
+
+For the empty screen message, I reworded the designer's proposal of "Hotels you dream of" to "Save your faves!" to make it more casual, while also making it clearer what the feature was about.
+
+
 
 ### Change Language bottom sheet
 
-I was asked to reword the message that get shown to users when they attempt to change the language of the app.
+I was asked to reword a bottom sheet menu that gets shown to users when they attempt to change the language of the app.
 
 ![Mockup of Change Language modal.](/images/change_language_modal.png "Change Language modal")
 
-In the new version, I simplified it, removing the instructions to reduce cognitive load.
+In the new version seen on the right, I removed the instructions on how to navigate the user's device settings. This helped reduce cognitive load while still keeping the core intention of the message intact.
 
 `;
 ---
