--- a/src/pages/work/spec-work/index.astro
+++ b/src/pages/work/spec-work/index.astro
@@ -13,13 +13,13 @@ Some content design spec pieces for both consumer and enterprise apps.
 
 A wireframe of a mobile app designed to allow users to pre-order meal at a restaurant.
 
-![Mockups of Restaurant Booking App.](/images/restaurant_order_screen_wireframe_with_shadow.png "A series of screen mockups outlining the Restaurant Booking App.")
+![Mockup of restaurant booking app order screen.](/images/restaurant_order_screen_wireframe_with_shadow.png "A series of screen mockups outlining the Restaurant Booking App.")
 
 ### Small Business Dashboard
 
 A dashboard for small business owners to manage their business.
 
-![Mockups of Restaurant Booking App.](/images/restaurant_booking_app.png "A series of screen mockups outlining the Restaurant Booking App.")
+![Mockups of Restaurant Booking App.](/images/small_biz_dashboard_with_shadow.png "A mockup of a dashboard outlining statistics for a small business.")
 
     `}
         class="mb-10 text-lg"
